feat: add side panel

--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
   <head>
     <title>Article Summary</title>
-    <link rel="stylesheet" href="popup.css" />
+    <link rel="stylesheet" href="./styles/popup.css" />
   </head>
   <body>
-    <button id="summarize__button">Summary</button>
-    <section class="summary">123</section>
-    <script src="popup.js"></script>
+    <button id="summary-panel__open">Open Summary Panel</button>
+    <script src="./scripts/popup.js"></script>
   </body>
 </html>
