feat: add options page

--- a/sidePanel.html
+++ b/sidePanel.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <h1 class="article-summary__title">Article Summary</h1>
-    <button id="article-summary__button--summarize">Summarize</button>
+    <button type="button" id="article-summary__button--summarize">Summarize</button>
+    <button type="button" id="article-summary__button--option">Option</button>
     <p id="article-summary__content"></p>
     <p class="article-summary__loading">Loading...</p>
     <script src="./scripts/sidePanel.js"></script>
