feat: add API configuration option to options page

--- a/options.html
+++ b/options.html
@@ -8,10 +8,12 @@
     <form id="options-form" class="options__form">
       <label for="url" class="options__label">URL: </label>
       <input type="text" name="url" id="url" class="options__input options__input--url" />
-      <label for="apiKey" class="options__label">Api Key: </label>
-      <input type="text" name="apiKey" id="apiKey" class="options__input options__input--apiKey" />
+      <label for="api-key" class="options__label">Api Key: </label>
+      <input type="text" name="apiKey" id="api-key" class="options__input options__input--api-key" />
       <label for="model" class="options__label">Model: </label>
       <input type="text" name="model" id="model" class="options__input options__input--model" />
+      <label for="server-api" class="options__label">Api: </label>
+      <input type="text" name="server-api" id="server-api" class="options__input options__input--server-api" />
       <button type="button" id="save" class="options__save">Save</button>
     </form>
     <script src="./scripts/options.js"></script>
