feat: loading message

--- a/sidePanel.html
+++ b/sidePanel.html
@@ -9,7 +9,7 @@
     <button type="button" id="article-summary__button--summarize">Summarize</button>
     <button type="button" id="article-summary__button--option">Option</button>
     <p id="article-summary__content"></p>
-    <p class="article-summary__loading">Loading...</p>
+    <p id="article-summary__loading" class="article-summary__loading-hidden">Loading...</p>
     <script src="./scripts/sidePanel.js"></script>
   </body>
 </html>
